--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pyzmq==25.1.2
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
+scikit-learn==1.4.2
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4
